[gd_scene load_steps=13 format=3 uid="uid://drk2vwef05yav"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_fg8hk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jyndg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1u3dc"]
bg_color = Color(0.903598, 0.903598, 0.903598, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xf1h8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkjqd"]
bg_color = Color(0.95158, 0.95158, 0.95158, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k17ud"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hbtqb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqo88"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ytrl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e410i"]
bg_color = Color(0.95158, 0.95158, 0.95158, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8q1kn"]
bg_color = Color(0.920995, 0.920995, 0.920995, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_3vjh0"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/styles/focus = SubResource("StyleBoxEmpty_jyndg")
Button/styles/hover = SubResource("StyleBoxFlat_1u3dc")
Button/styles/hover_pressed = SubResource("StyleBoxEmpty_xf1h8")
Button/styles/normal = SubResource("StyleBoxFlat_vkjqd")
Button/styles/pressed = SubResource("StyleBoxFlat_k17ud")
CheckButton/colors/font_color = Color(0, 0, 0, 1)
CheckButton/colors/font_hover_color = Color(0, 0, 0, 1)
CheckButton/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
CheckButton/colors/font_pressed_color = Color(0, 0, 0, 1)
CheckButton/styles/normal = SubResource("StyleBoxEmpty_hbtqb")
CheckButton/styles/pressed = SubResource("StyleBoxEmpty_yqo88")
Label/colors/font_color = Color(0, 0, 0, 1)
LineEdit/colors/caret_color = Color(0, 0, 0, 1)
LineEdit/colors/font_color = Color(0, 0, 0, 1)
LineEdit/styles/focus = SubResource("StyleBoxEmpty_2ytrl")
LineEdit/styles/normal = SubResource("StyleBoxFlat_e410i")
Panel/styles/panel = SubResource("StyleBoxFlat_8q1kn")

[node name="Main Menu" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3vjh0")
script = ExtResource("1_fg8hk")

[node name="Main" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Main"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Play" type="Button" parent="UI/Main/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="UI/Main/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="UI/Main/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Quit"

[node name="Settings" type="CenterContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Settings"]
custom_minimum_size = Vector2(1200, 800)
layout_mode = 2

[node name="Back" type="Button" parent="UI/Settings/Panel"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 95.0
offset_bottom = 55.0
text = "< Back"

[node name="Label" type="Label" parent="UI/Settings/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_top = 25.0
offset_right = 37.0
offset_bottom = 48.0
grow_horizontal = 2
text = "SETTINGS"

[node name="Properties" type="VBoxContainer" parent="UI/Settings/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 70.0
offset_right = -25.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Max FPS" type="HBoxContainer" parent="UI/Settings/Panel/Properties"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Settings/Panel/Properties/Max FPS"]
layout_mode = 2
text = "Max FPS:"

[node name="MaxFPS" type="SpinBox" parent="UI/Settings/Panel/Properties/Max FPS"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 30.0
max_value = 300.0
value = 60.0
rounded = true

[node name="Apply" type="Button" parent="UI/Settings/Panel/Properties/Max FPS"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Apply"

[node name="V Sync" type="HBoxContainer" parent="UI/Settings/Panel/Properties"]
layout_mode = 2

[node name="VSync" type="CheckButton" parent="UI/Settings/Panel/Properties/V Sync"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "VSync"

[node name="Label" type="Label" parent="UI/Settings/Panel/Properties"]
layout_mode = 2
text = "a whole lotta options ik :)






no i can not let you change the resolution do you know the pain i went through"

[node name="Label" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 63.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "v0.1"

[connection signal="pressed" from="UI/Main/VBoxContainer/Play" to="UI" method="_on_play_pressed"]
[connection signal="pressed" from="UI/Main/VBoxContainer/Settings" to="UI" method="_on_settings_pressed"]
[connection signal="pressed" from="UI/Main/VBoxContainer/Quit" to="UI" method="_on_quit_pressed"]
[connection signal="pressed" from="UI/Settings/Panel/Back" to="UI" method="_on_settings_back_pressed"]
[connection signal="pressed" from="UI/Settings/Panel/Properties/Max FPS/Apply" to="UI" method="_on_fps_apply_pressed"]
[connection signal="toggled" from="UI/Settings/Panel/Properties/V Sync/VSync" to="UI" method="_on_v_sync_toggled"]
